# Wishmaster_my

./: Dockerfile  LICENSE  README 2.md  README.md  address_book.json  main.py  pyproject.toml
notes/: note.py  note_SOLID.py  wrap.py
phonebook/: address_book.json  phonebook.py  phonebook_SOLID.py
saves/: address_book.json
sorting/: sorting.py  sorting_SOLID.py
wishmaster_venv/: pyvenv.cfg
